schema/testdata/errors/expression_forbidden_lhs_array.keel
model Post {
    fields {
        authors Author[]
    }

    @permission(
        //expect-error:39:41:E031:Both sides of the expression cannot be an array
        expression: post.authors.name in post.authors.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Text
        post Post
    }
}
